--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Elixre</h1>
+    <script src="main.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
