--- a/client/index.html
+++ b/client/index.html
@@ -8,54 +8,86 @@
     <meta name="author" content="Louis Pilfold, et al"/>
   </head>
   <body>
-    <main id="main" role="main">
-    </main>
 
-    <div class="reference">
-      <p>Reference</p>
-      <ul>
-        <li><code>.</code> non-newline char</li>
-        <li><code>^</code> start of line</li>
-        <li><code>$</code> end of line</li>
-        <li><code>\b</code> word boundary</li>
-        <li><code>\b</code> word boundary</li>
-        <li><code>\A</code> start of subject</li>
-        <li><code>\z</code> end of subject</li>
-        <li><code>\d</code> decimal digit</li>
-        <li><code>\D</code> non-decimal digit</li>
-        <li><code>\s</code> whitespace</li>
-        <li><code>\S</code> non-whitespace</li>
-        <li><code>\w</code> word character</li>
-        <li><code>\W</code> non-word character</li>
-        <li><code>(a|z)</code> a or z</li>
-        <li><code>[az]</code> a or z</li>
-        <li><code>[^az]</code> not a or z</li>
-        <li><code>[a-z]</code> a through z</li>
-        <li><code>(foo)</code> capture foo</li>
-        <li><code>a?</code> 0 or 1 a</li>
-        <li><code>a*</code> 0 or more a</li>
-        <li><code>a+</code> 1 or more a</li>
-        <li><code>a{3}</code> 3 of a</li>
-        <li><code>a{3,}</code> 3 or more a</li>
-        <li><code>a{3,5}</code> 3 through 5 a</li>
-      </ul>
-      <p>Modifiers</p>
-      <ul>
-        <li><code>u</code> unicode</li>
-        <li><code>i</code> case insensitive</li>
-        <li><code>s</code> dot matches newline</li>
-        <li><code>m</code> multiline</li>
-        <li><code>x</code> whitespace ignored</li>
-        <li><code>f</code> start on first line</li>
-        <li><code>r</code> inverts greediness</li>
-      </ul>
-      <p class="reference__more">
-      For more information see the Elixir
-      <a href="http://elixir-lang.org/docs/v1.0/elixir/Regex.html" target="_blank">
-        Regex documentation</a>, and the Erlang
-      <a href="http://www.erlang.org/doc/man/re.html" target="_blank">re
-        documentation</a>.
-      </p>
+    <div class="container">
+      <header class="header">
+        <h1>Elixre</h1>
+        <h3>An Elixir regular expression editor & tester</h3>
+      </header>
+
+      <main class="test" id="main" role="main">
+      </main>
+
+      <div class="reference">
+        <p>Reference</p>
+        <ul>
+          <li><code>.</code> non-newline char</li>
+          <li><code>^</code> start of line</li>
+          <li><code>$</code> end of line</li>
+          <li><code>\b</code> word boundary</li>
+          <li><code>\b</code> word boundary</li>
+          <li><code>\A</code> start of subject</li>
+          <li><code>\z</code> end of subject</li>
+          <li><code>\d</code> decimal digit</li>
+          <li><code>\D</code> non-decimal digit</li>
+          <li><code>\s</code> whitespace</li>
+          <li><code>\S</code> non-whitespace</li>
+          <li><code>\w</code> word character</li>
+          <li><code>\W</code> non-word character</li>
+          <li><code>(a|z)</code> a or z</li>
+          <li><code>[az]</code> a or z</li>
+          <li><code>[^az]</code> not a or z</li>
+          <li><code>[a-z]</code> a through z</li>
+          <li><code>(foo)</code> capture foo</li>
+          <li><code>a?</code> 0 or 1 a</li>
+          <li><code>a*</code> 0 or more a</li>
+          <li><code>a+</code> 1 or more a</li>
+          <li><code>a{3}</code> 3 of a</li>
+          <li><code>a{3,}</code> 3 or more a</li>
+          <li><code>a{3,5}</code> 3 through 5 a</li>
+        </ul>
+        <p>Modifiers</p>
+        <ul>
+          <li><code>u</code> unicode</li>
+          <li><code>i</code> case insensitive</li>
+          <li><code>s</code> dot matches newline</li>
+          <li><code>m</code> multiline</li>
+          <li><code>x</code> whitespace ignored</li>
+          <li><code>f</code> start on first line</li>
+          <li><code>r</code> inverts greediness</li>
+        </ul>
+        <p class="reference__more">
+        For more information see the Elixir
+        <a href="http://elixir-lang.org/docs/v1.0/elixir/Regex.html" target="_blank">
+          Regex documentation</a> and the Erlang
+        <a href="http://www.erlang.org/doc/man/re.html" target="_blank">re
+          documentation</a>.
+        </p>
+      </div>
     </div>
+
+    <footer class="footer">
+      <p>
+        Elix<span class="b">re</span> is
+        <a href="http://en.wikipedia.org/wiki/Free_software" target="_blank">
+        Free software</a>, available under the
+        <a href="https://gnu.org/licenses/agpl.html" target="_blank">GNU
+          AGPL3</a> licence.
+      </p>
+      <p>
+        The source code is freely available on
+        <a href="http://github.com/lpil/elixre" target="_blank">GitHub</a>.
+        (Contributions welcome!)
+      </p>
+      <p>
+        Inspired by Michael Lovitt's excellent
+        <a href="http://rubular.com/" target="_blank">Rubular</a>.
+      </p>
+      <p>
+        Copyright © 2015
+        <a href="http://lpil.uk/" target="_blank">Louis Pilfold</a>. All Rights
+        Reserved.
+      </p>
+    </footer>
   </body>
 </html>
