Copyright © year update

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
         <a href="http://rubular.com/" target="_blank">Rubular</a>.
       </p>
       <p>
-        Copyright © 2015
+        Copyright © 2015 - Present
         <a href="http://lpil.uk/" target="_blank">Louis Pilfold</a>. All Rights
         Reserved.
       </p>
