--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Elixre</title>
     <meta name="description" content="An Elixir regular expression editor &amp; tester."/>
     <meta name="author" content="Louis Pilfold, et al"/>
+    <link rel="stylesheet" href="main.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
 
@@ -89,5 +90,11 @@
         Reserved.
       </p>
     </footer>
+    <script src="main.js" charset="utf-8"></script>
+    <script charset="utf-8">
+Elm.Main.embed(document.getElementById("main"), {
+  regexEndpoint: "/regex"
+});
+    </script>
   </body>
 </html>
